- fix accordion arrow overlapping text

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -661,12 +661,15 @@ header .navbar-nav {
     margin:0;
     a {
         display: block;
-        padding: 20px;
+        padding: 20px 50px 20px 20px;
         color: $dark;
         background: $lighter;
         transition: background-color .8s;
         text-decoration: none;
         position: relative;
+        @include media-breakpoint-up(md) {
+            padding: 20px 80px 20px 20px;
+        }
         
         &:hover {
             color: $brandweb;
@@ -676,11 +679,14 @@ header .navbar-nav {
         &:after {
             content: $fa-var-caret-up;
             position: absolute;
-            right: 40px;
+            right: 20px;
             top: 20px;
             font-family: FontAwesome;
             transform: rotateX(0deg);
             transition: transform .5s;
+            @include media-breakpoint-up(md) {
+                right: 40px;
+            }
         }
     }
 
